<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <!--  Card Flip  -->
        <RelativeLayout
            android:id="@+id/card_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <include
                android:id="@+id/include_card_back"
                layout="@layout/card_back_layout"/>
            <include
                android:id="@+id/include_card_front"
                layout="@layout/card_from_layout" />



        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_number_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="false"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:hintEnabled="false"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:background="@drawable/rounded_input_background"
                android:inputType="number"
                android:maxLength="19"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/holder_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="false"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:hintEnabled="false"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/holder_name_input"
                android:layout_width="match_parent"

                android:hint="@string/holder_name"
                android:maxLength="20"
                android:background="@drawable/rounded_input_background"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/expiry_date_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:errorEnabled="false"
                    android:hint=""
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusBottomEnd="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/expiry_date_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/expiration_date"
                        android:background="@drawable/rounded_input_background"
                        android:inputType="numberSigned"
                        android:maxLength="5"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="16dp">



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cvv_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:errorEnabled="false"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusBottomEnd="12dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cvv_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:hint="@string/cvc"
                        android:background="@drawable/rounded_input_background"
                        android:maxLength="4"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/otp_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otp_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:errorEnabled="false"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:hint="123456"
                    android:background="@drawable/rounded_input_background"
                    android:maxLength="6"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_card"
            android:id="@+id/button_add_card"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button"
            app:backgroundTint="@android:color/black"
            app:cornerRadius="12dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>